# paracore

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
examples/: 01_single_job.py  02_array_job.py  03_map_func.py  04_autotune.py  05_environment.py  README.md  check_env.py  commands.txt  generate_test_data.py  process_data.py
paracore/: __init__.py  api.py  cli.py  config.py  dask_helpers.py  status.py  submitit_backend.py  types.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_status.py  test_submitit_backend.py
