[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paracore"
version = "1.0.0"
description = "Thin, opinionated wrapper over Slurm via Submitit for compute workloads"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "submitit>=1.4.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "mypy>=0.990",
    "ruff>=0.0.260",
]

[project.scripts]
paracore = "paracore.cli:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "UP",    # Pyupgrade (avoid Python 3.10+ syntax changes)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
